# private-gpt

./: .coverage.Rajs-MacBook-Pro.local.14599.XOvDBNjx  .dockerignore  .env  .env.template  .flake8  .gitignore  .pre-commit-config.yaml  Alice-in-Wonderland.pdf:Zone.Identifier  CHANGELOG.md  CITATION.cff  CNAME  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile.cuda  Dockerfile.external  Dockerfile.external-new  Dockerfile.fireworks  Dockerfile.kubernetes  Dockerfile.llamacpp  Dockerfile.llamacpp-cpu  Dockerfile.local  Dockerfile.local-cuda  Dockerfile.local.gpu  Dockerfile.nginx  Dockerfile.ollama  Dockerfile.openshift  Jenkinsfile  LICENSE  Makefile  PR_DESCRIPTION_1625.md  README.md  SECURITY.md  StartHere.txt  VBNB  VBNB token memecoin  alembic.ini  alembic_readme.md  api.py  app.py  argsHandler.py  (+110 more)
.aws/: ecs-task-definition-staging.json
.docker/: entrypoint.sh  router.yml
.github/: README.md  dependabot.yml  pull_request_template.md
.neuro/: live.yaml
.run/: server-local.run.xml
Models/: models.md
adapters/: chroma_adapter.py  vector_store_adapter.py  weaviate_adapter.py
alembic/: env.py  script.py.mako
api/: main.py  models.py
chroma_db/: chroma.sqlite3
data/: glossary for import ff85b4a40e2d4e58b80e60f2e3fda045.md
db/: chroma-collections.parquet
docs/: 0001-ec-private-gpt-architecture.md  BENCHMARK_RESULTS.md  CNAME  INCREMENTAL_PIPELINE.md  description.md  index.html  index.md  openapi.json  openapi.md  weaviate.md
example_questions/: maql.txt
examples/: README.md  ag2_multiagent.py
experiments/: llama_index.ipynb
fern/: README.md  docs.yml  fern.config.json  generators.yml
jar/: Q31.txt  Q32.txt
lambdaAPI/: api.py  requirements.txt
local_data/: .gitignore
models/: models.md  models.txt
nginx/: nginx.conf
pages/: english.py  french.py
papers/: bibtex.bib
privateGPT/: chat.py  constants.py  ingestor.py
private_gpt/: __init__.py  __main__.py  alembic.ini  constants.py  di.py  docs.py  eager_loading.py  global_handler.py  home.py  initialize.py  launcher.py  main.py  models.py  paths.py  sagemaker.py  settings.py  types.py
public_docs/: description.md
scrape/: maw.py  net.py  scrapy.cfg  snack.py
scripts/: .bash_history  __init__.py  auto_discover_models.py  benchmark_compute.py  benchmark_incremental.py  benchmark_quality.py  benchmark_quality_full.py  benchmark_ragas.py  benchmark_wikipedia.py  build_pip_index.py  extract-openapi.py  extract_openapi.py  generate_homebrew_formula.py  ingest.py  ingest_folder.py  longquestion.py  question.py  question.txt  readers.py  set_version.py  setup  system.txt  test_async_chat_arq.py  update_claude_openapi.py  update_claude_specs.py  utils.py  worker_entrypoint
settings/: settings-app.yaml  settings-pgvector.yaml  settings-vllm-pgvector.yaml  settings.yaml
sh/: ask_gpt  entrypoint.sh  update_gpt
simple/: index.html
source_documents/: .gitignore  Acceptance Criterion Human Factors and Clinical Us 1fe4045e37f544f3a68c9fb1c07170d0.md  Akanuma et al. - 2008 - Psychiatric comorbidity in adult patients with idiopathic generalized epilepsy - Epilepsy and Behavior.html  Allergies and Dermal Concerns 7add4d60b2994a95afe32bf5082a5788.md  Behavioral Considerations 515f306e0a8448c5aab1959e6ded7ac7.md  Binnie et al. - 1984 - Colour and photosensitive epilepsy - Electroencephalography and Clinical Neurophysiology.html  Binnie, Findlay, Wilkins - 1985 - Mechanisms of epileptogenesis in photosensitive epilepsy implied by the effects of moving patterns -.html  Brazzo et al. - 2011 - Abnormal visual habituation in pediatric photosensitive epilepsy - Clinical Neurophysiology.html  Brinciotti et al. - 1994 - Pattern Sensitivity and Photosensitivity in Epileptic Children with Visually Induced Seizures - Epilepsia.html  Coleman et al. - 1979 - Abnormal visual pathways in human albinos studied with visually evoked potentials - Experimental Neurology.html  Communication channels and meetings 16a2dfe35eb5426892c373b5ce2f2e42.md  Corpus.txt  DOMINO, CORSSEN, SWEET - 1963 - Effects of Various General Anesthetics on the Visually Envoked Response - Anesthesia and analgesia.html  Erba - 2001 - Preventing seizures from pocket monsters A way to control reflex epilepsy - Neurology.html  Gardullo - 2013 - Spectacles of slavery Pageantry, film and early twentieth-century public memory - Slavery and Abolition(2).html  Gardullo - 2013 - Spectacles of slavery Pageantry, film and early twentieth-century public memory - Slavery and Abolition(3).html  Gardullo - 2013 - Spectacles of slavery Pageantry, film and early twentieth-century public memory - Slavery and Abolition(4).html  Gardullo - 2013 - Spectacles of slavery Pageantry, film and early twentieth-century public memory - Slavery and Abolition(5).html  Gardullo - 2013 - Spectacles of slavery Pageantry, film and early twentieth-century public memory - Slavery and Abolition.html  Getting started f4350685f850443097a9cc111291c2f5.html  Green - 1969 - Photosensitive Epilepsy The Electroretinogram and Visually Evoked Response - Archives of Neurology.html  HR Policies & Expenses 6328d9aa141a411d8eeaa0856f66d149.md  Harding - 1994 - Photosensitivity a vestigial echo The first Grey Walter lecture - International Journal of Psychophysiology.html  Hermes, Kasteleijn-Nolst Trenité, Winawer - 2017 - Gamma oscillations and photosensitive epilepsy - Current Biology.html  Human Factors & Clinical Guidance - CXN ONE.docx  Kaplan et al. - 1993 - Visual evoked potentials in adrenolukodystrophy A trial with glycerol trioleate and Lorenzo oil - Annals of Neur.html  Kasteleijn-Nolst Trenité et al. - 2007 - Evaluation of brivaracetam, a novel SV2A ligand, in the photosensitivity model - Neurology.html  Langs, Fabisch, Fabisch - 2000 - A case of comorbidity between panic disorder and photosensitive epilepsy - Psychopathology.html  Lopes da Silva, Harding - 2011 - Transition to seizure in photosensitive epilepsy - Epilepsy Research.html  Löscher, Brandt - 2010 - Prevention or modification of epileptogenesis after brain insults Experimental approaches and translational r.html  (+215 more)
ui/: AGENTS.md  (+3 more)
(+3019 files in other folders)
